<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/tab_dashboard" />
        <item
            android:id="@+id/drawer_book_ride"
            android:icon="@drawable/ic_book_ride"
            android:title="@string/tab_book_ride" />
        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history"
            android:title="@string/tab_history" />
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="Account &amp; Support">
        <menu>
            <item
                android:id="@+id/drawer_manual"
                android:icon="@drawable/ic_manual"
                android:title="System Manual" />
            <item
                android:id="@+id/drawer_developers"
                android:icon="@drawable/ic_developers"
                android:title="Developers" />
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_about"
                android:title="About Us" />
            <item
                android:id="@+id/drawer_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/drawer_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
